Bug#32798: DISTINCT in GROUP_CONCAT clause fails when ordering by a column with null values

Post-merge fix